--- a/Demo/Properties/launchSettings.json
+++ b/Demo/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Demo": {
-      "commandName": "Project",
-      "commandLineArgs": "Chapter7.txt"
+      "commandName": "Project"
     }
   }
 }
