--- a/Demo/Properties/launchSettings.json
+++ b/Demo/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Demo": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "Chapter10.txt"
     }
   }
 }
