--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -6,17 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Chapter10.txt" />
-    <None Remove="Chapter7.txt" />
+    <None Remove="simplebool.txt" />
+    <None Remove="untyped.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Chapter10.txt">
+    <Content Include="simplebool.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Chapter7.txt">
+    <Content Include="untyped.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleBool\SimpleBool.csproj" />
+    <ProjectReference Include="..\Untyped\Untyped.csproj" />
   </ItemGroup>
 
 </Project>
